--- a/WooCommerce-Tool/Views/GenerateOrdersView.xaml
+++ b/WooCommerce-Tool/Views/GenerateOrdersView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WooCommerce_Tool.GenerateOrders"
+﻿<UserControl x:Class="WooCommerce_Tool.GenerateOrdersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
