--- a/WooCommerce-Tool/Views/MainWindow.xaml
+++ b/WooCommerce-Tool/Views/MainWindow.xaml
@@ -58,7 +58,7 @@
                                 <RowDefinition Height="70" />
                             </Grid.RowDefinitions>
                             <Button Style="{StaticResource MenuButtons}" Name="Dashboard" Grid.Row="0" Click="btnShow_Click_1" Content="1"/>
-                            <Button Style="{StaticResource MenuButtons}" Name="Taskmanagement" Grid.Row="1" Click="btnShow_Click_2" Content="2"/>
+                            <Button Style="{StaticResource MenuButtons}" Name="Taskmanagement" Grid.Row="1" Click="btnShow_Click_2" Content="Product Prediction"/>
                             <Button Style="{StaticResource MenuButtons}" Name="OrderPrediction" Grid.Row="2" Click="btnShow_Click_3" Content="Orders Prediction" />
                             <Button Style="{StaticResource MenuButtons}" Name="Profiles" Grid.Row="3" Click="btnShow_Click_4" Content="4" />
                             <Button Style="{StaticResource MenuButtons}" Name="GenerateOrders" Grid.Row="4" Click="btnShow_Click_5" Content="Generate Orders" />
