--- a/WooCommerce-Tool/Views/OrderPredictionView.xaml
+++ b/WooCommerce-Tool/Views/OrderPredictionView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WooCommerce_Tool.Views"
-             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" xmlns:viewsmodels="clr-namespace:WooCommerce_Tool.ViewsModels" d:DataContext="{d:DesignInstance viewsmodels:OrderPredictionViewModel}"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" xmlns:viewsmodels="clr-namespace:WooCommerce_Tool.ViewsModels" xmlns:toolkit="http://schemas.microsoft.com/netfx/2009/xaml/presentation" d:DataContext="{d:DesignInstance viewsmodels:OrderPredictionViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -147,8 +147,24 @@
                     </TabItem>
                 </TabControl>
             </Grid>
+            <!--Datetime-->
             <Grid Grid.Row="3" Background="#0F1A2C" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <ComboBox x:Name="comboBoxStartDate"  Width="120" Background="Transparent" Style="{DynamicResource ComboBoxStyle1}" ItemsSource ="{Binding StartDateComboData}" Text="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+                <Grid Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <ComboBox x:Name="comboBoxEndDate"  Width="120"  Background="Transparent" Style="{DynamicResource ComboBoxStyle1}" ItemsSource ="{Binding EndDateComboData}" Text="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+
             </Grid>
+            <!--Button -->
             <Grid Grid.Row="4"  >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
