--- a/WooCommerce-Tool/Views/OrderPredictionView.xaml
+++ b/WooCommerce-Tool/Views/OrderPredictionView.xaml
@@ -162,6 +162,12 @@
                 <Grid Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
                     <ComboBox x:Name="comboBoxEndDate"  Width="120"  Background="Transparent" Style="{DynamicResource ComboBoxStyle1}" ItemsSource ="{Binding EndDateComboData}" Text="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
+                <Grid Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <ComboBox x:Name="comboBoxMonth"  Width="120"  Background="Transparent" Style="{DynamicResource ComboBoxStyle1}" ItemsSource ="{Binding MonthComboData}" Text="{Binding Month, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+                <Grid Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <ComboBox x:Name="comboBoxTime"  Width="120"  Background="Transparent" Style="{DynamicResource ComboBoxStyle1}" ItemsSource ="{Binding TimeComboData}" Text="{Binding Time, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
 
             </Grid>
             <!--Button -->
