--- a/WooCommerce-Tool/Views/OrderPredictionView.xaml
+++ b/WooCommerce-Tool/Views/OrderPredictionView.xaml
@@ -56,7 +56,7 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="1" Grid.Column="1"  >
-            <!--vidinis gridas -->
+            <!--inside grid -->
             <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
                 <RowDefinition Height="30" />
@@ -64,7 +64,7 @@
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
-            <!--grido kampai suapvalinti -->
+            <!--grid corners -->
             <Border CornerRadius="30,30,0,0" Grid.Row="0"  BorderThickness="3" Padding="0" BorderBrush="#0F1A2C">
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
@@ -105,7 +105,7 @@
                         <ComboBox x:Name="comboBoxDBNames"  Width="120"  Background="Transparent" DropDownClosed="comboBoxDBNames_DropDownClosed" Style="{DynamicResource ComboBoxStyle1}" ItemsSource ="{Binding NamesComboData}" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
                  </TextBlock>
             </Grid>
-            <!--Chart -->
+            <!--Chart adn data combobox -->
             <Grid Grid.Row="2" Background="#0F1A2C" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
@@ -152,7 +152,7 @@
                     </TabItem>
                 </TabControl>
             </Grid>
-            <!--Datetime-->
+            <!--3 combobox-->
             <Grid Grid.Row="3" Background="#0F1A2C" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
@@ -175,7 +175,7 @@
                 </Grid>
 
             </Grid>
-            <!--Button -->
+            <!--Button and status-->
             <Grid Grid.Row="4"  >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
