--- a/WooCommerce-Tool/Views/ProductPredictionView.xaml
+++ b/WooCommerce-Tool/Views/ProductPredictionView.xaml
@@ -56,7 +56,7 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="1" Grid.Column="1"  >
-            <!--vidinis gridas -->
+            <!--inside grid -->
             <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
                 <RowDefinition Height="30" />
@@ -64,7 +64,7 @@
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
-            <!--grido kampai suapvalinti -->
+            <!--grid corners -->
             <Border CornerRadius="30,30,0,0" Grid.Row="0"  BorderThickness="3" Padding="0" BorderBrush="#0F1A2C">
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
@@ -90,7 +90,7 @@
                     <Label Style="{StaticResource LabelBig}" Name="Label1" Content="Product Prediction" Width="300"/>
                 </TextBlock>
             </Grid>
-            <!--general label -->
+            <!--general label and data combobox -->
             <Grid Grid.Row="1" Background="#0F1A2C" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
@@ -152,7 +152,7 @@
                     </TabItem>
                 </TabControl>
             </Grid>
-            <!--Datetime-->
+            <!--3 combobox-->
             <Grid Grid.Row="3" Background="#0F1A2C" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
@@ -172,6 +172,7 @@
                 </Grid>
 
             </Grid>
+            <!--button and status-->
             <Grid Grid.Row="4"  >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
